--- a/Learning.Blazor/wwwroot/index.html
+++ b/Learning.Blazor/wwwroot/index.html
@@ -9,6 +9,9 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="Learning.Blazor.styles.css" rel="stylesheet" />
+
+    <script src="https://kit.fontawesome.com/273d0585ea.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
